--- a/package.json
+++ b/package.json
@@ -14,12 +14,23 @@
     "@angular/common": "~12.0.2",
     "@angular/compiler": "~12.0.2",
     "@angular/core": "~12.0.2",
+    "@angular/fire": "^6.1.5",
     "@angular/forms": "~12.0.2",
+    "@angular/localize": "~12.0.2",
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
+    "@ngtools/webpack": "^12.0.3",
+    "angularfire2": "^4.0.0-rc.1",
+    "bootstrap": "^5.0.1",
+    "firebase": "^8.6.3",
+    "grpc": "^1.24.10",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
+    "save": "^2.4.0",
     "tslib": "^2.1.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -34,6 +45,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "typescript": "~4.2.3"
+    "typescript": "~4.2.3",
+    "webpack": "^5.38.1"
   }
 }
